--- a/.envexample
+++ b/.envexample
@@ -3,3 +3,5 @@ GF_SERVER_HTTP_PORT=80
 GF_SECURITY_ADMIN_USER='admin'
 GF_SECURITY_ADMIN_PASSWORD='admin'
 GF_USERS_ALLOW_SIGN_UP=false
+
+LOKI_CREDENTIALS='user:$hashedpassword'
