--- a/grafana/provisioning/datasources.yml
+++ b/grafana/provisioning/datasources.yml
@@ -11,3 +11,11 @@ datasources:
     isDefault: true
     version: 2
     editable: false
+  - name: Prometheus
+    type: prometheus
+    access: proxy
+    orgId: 1
+    url: http://prometheus
+    basicAuth: false
+    version: 1
+    editable: false
