--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,8 +5,8 @@ scrape_configs:
   - job_name: 'prometheus'
     scrape_interval: 1m
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['localhost']
 
   - job_name: 'node'
     static_configs:
-      - targets: ['node-exporter:9100']
+      - targets: ['node-exporter']
