--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -10,3 +10,21 @@ scrape_configs:
   - job_name: 'node'
     static_configs:
       - targets: ['node-exporter']
+
+  - job_name: 'myemdr-api-dev'
+    scrape_interval: 10s
+    metrics_path: '/-/metrics'
+    static_configs:
+      - targets: ['myemdr-api-dev:3334']
+
+  - job_name: 'myemdr-api-staging'
+    scrape_interval: 10s
+    metrics_path: '/-/metrics'
+    static_configs:
+      - targets: ['myemdr-api-staging:3334']
+
+  - job_name: 'myemdr-api-production'
+    scrape_interval: 10s
+    metrics_path: '/-/metrics'
+    static_configs:
+      - targets: ['myemdr-api-production:3334']
