inft: add traefik promeheus job, fix tempo memcached

--- a/tempo/tempo.yml
+++ b/tempo/tempo.yml
@@ -10,7 +10,7 @@ cache:
   - roles:
     - frontend-search  
     memcached: 
-      addresses: dns+memcached
+      addresses: memcached
 
 query_frontend:
   search:
