--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -11,14 +11,19 @@ scrape_configs:
     static_configs:
       - targets: ['node-exporter']
 
-  - job_name: 'myemdr-api-dev'
+  - job_name: 'traefik'
     scrape_interval: 10s
+    static_configs:
+      - targets: ['traefik:8082']
+
+  - job_name: 'myemdr-api-dev'
+    scrape_interval: 20s
     metrics_path: '/-/metrics'
     static_configs:
       - targets: ['myemdr-api-dev:3334']
 
   - job_name: 'myemdr-api-staging'
-    scrape_interval: 10s
+    scrape_interval: 20s
     metrics_path: '/-/metrics'
     static_configs:
       - targets: ['myemdr-api-staging:3334']
