--- a/.envexample
+++ b/.envexample
@@ -1,3 +1,7 @@
+GRAFANA_TRAEFIK_HOST='grafana.d.localhost'
+LOKI_TRAEFIK_HOST='loki.d.localhost'
+TEMPO_TRAEFIK_HOST='tempo.d.localhost'
+
 GF_PATHS_PROVISIONING=/etc/grafana/provisioning
 GF_SERVER_HTTP_PORT=80
 GF_SECURITY_ADMIN_USER='admin'
@@ -6,6 +10,6 @@ GF_USERS_ALLOW_SIGN_UP=false
 
 LOKI_CREDENTIALS='user:$hashedpassword'
 
-GRAFANA_TRAEFIK_HOST='grafana.d.localhost'
-LOKI_TRAEFIK_HOST='loki.d.localhost'
-TEMPO_TRAEFIK_HOST='tempo.d.localhost'
+TELEGRAM_BOT_TOKEN='token'
+TELEGRAM_CHANNEL_ID='id'
+
