infr: update alerts and dashboards

--- a/grafana/provisioning/alerting/alerts.yaml
+++ b/grafana/provisioning/alerting/alerts.yaml
@@ -1,68 +1,132 @@
 apiVersion: 1
 groups:
-    - orgId: 1
-      name: Highest importance
-      folder: healthchecks
-      interval: 10s
-      rules:
-        - uid: aeif9y1w8l43ka
-          title: Healthcheck
-          condition: B
-          data:
-            - refId: A
-              relativeTimeRange:
-                from: 600
-                to: 0
-              datasourceUid: PBFA97CFB590B2093
-              model:
-                datasource:
-                    type: prometheus
-                    uid: PBFA97CFB590B2093
-                disableTextWrap: false
-                editorMode: builder
-                expr: sum by(job) (up{job!="myemdr-api-dev"})
-                fullMetaSearch: false
-                includeNullMetadata: true
-                instant: true
-                intervalMs: 1000
-                legendFormat: __auto
-                maxDataPoints: 43200
-                range: false
-                refId: A
-                useBackend: false
-            - refId: B
-              datasourceUid: __expr__
-              model:
-                conditions:
-                    - evaluator:
-                        params:
-                            - 1
-                            - 0
-                        type: lt
-                      operator:
-                        type: and
-                      query:
-                        params: []
-                      reducer:
-                        params: []
-                        type: avg
-                      type: query
-                datasource:
-                    name: Expression
-                    type: __expr__
-                    uid: __expr__
-                expression: A
-                intervalMs: 1000
-                maxDataPoints: 43200
-                refId: B
-                type: threshold
-          noDataState: NoData
-          execErrState: Error
-          for: 1m
-          annotations:
-            summary: sevice is down
-          labels:
-            severity: high
-          isPaused: false
-          notification_settings:
-            receiver: Telegram
+  - orgId: 1
+    name: Highest importance
+    folder: healthchecks
+    interval: 10s
+    rules:
+      - uid: aeif9y1w8l43ka
+        title: Healthcheck
+        condition: B
+        data:
+          - refId: A
+            relativeTimeRange:
+              from: 600
+              to: 0
+            datasourceUid: PBFA97CFB590B2093
+            model:
+              datasource:
+                  type: prometheus
+                  uid: PBFA97CFB590B2093
+              disableTextWrap: false
+              editorMode: builder
+              expr: sum by(job) (up{job!="myemdr-api-dev"})
+              fullMetaSearch: false
+              includeNullMetadata: true
+              instant: true
+              intervalMs: 1000
+              legendFormat: __auto
+              maxDataPoints: 43200
+              range: false
+              refId: A
+              useBackend: false
+          - refId: B
+            datasourceUid: __expr__
+            model:
+              conditions:
+                  - evaluator:
+                      params:
+                          - 1
+                          - 0
+                      type: lt
+                    operator:
+                      type: and
+                    query:
+                      params: []
+                    reducer:
+                      params: []
+                      type: avg
+                    type: query
+              datasource:
+                  name: Expression
+                  type: __expr__
+                  uid: __expr__
+              expression: A
+              intervalMs: 1000
+              maxDataPoints: 43200
+              refId: B
+              type: threshold
+        noDataState: NoData
+        execErrState: Error
+        for: 1m
+        annotations:
+          summary: sevice is down
+        labels:
+          severity: high
+        isPaused: false
+        notification_settings:
+          receiver: Telegram
+  - orgId: 1
+    name: High importance
+    folder: healthchecks
+    interval: 30m
+    rules:
+      - uid: aeihwjwgc00sgf
+        title: TLS certificates expiration
+        condition: B
+        data:
+          - refId: A
+            relativeTimeRange:
+              from: 600
+              to: 0
+            datasourceUid: PBFA97CFB590B2093
+            model:
+              datasource:
+                  type: prometheus
+                  uid: PBFA97CFB590B2093
+              disableTextWrap: false
+              editorMode: code
+              expr: sum by(sans, job) (((traefik_tls_certs_not_after{job="traefik"}) * 1000) - (time() * 1000)) / (1000 * 60 * 60 * 24)
+              fullMetaSearch: false
+              hide: false
+              includeNullMetadata: true
+              instant: true
+              intervalMs: 1000
+              legendFormat: __auto
+              maxDataPoints: 43200
+              range: false
+              refId: A
+              useBackend: false
+          - refId: B
+            datasourceUid: __expr__
+            model:
+              conditions:
+                  - evaluator:
+                      params:
+                          - 30
+                      type: lt
+                    operator:
+                      type: and
+                    query:
+                      params:
+                          - C
+                    reducer:
+                      params: []
+                      type: last
+                    type: query
+              datasource:
+                  type: __expr__
+                  uid: __expr__
+              expression: A
+              intervalMs: 1000
+              maxDataPoints: 43200
+              refId: B
+              type: threshold
+        noDataState: NoData
+        execErrState: Error
+        for: 30m
+        annotations:
+          summary: TLS certificate expires in less that 30 days
+        isPaused: false
+        notification_settings:
+          receiver: Telegram
