--- a/.envexample
+++ b/.envexample
@@ -7,6 +7,8 @@ GF_SERVER_HTTP_PORT=80
 GF_SECURITY_ADMIN_USER='admin'
 GF_SECURITY_ADMIN_PASSWORD='admin'
 GF_USERS_ALLOW_SIGN_UP=false
+GF_SERVER_DOMAIN='grafana.d.localhost'
+GF_SERVER_ROOT_URL='https://grafana.d.localhost'
 
 LOKI_CREDENTIALS='user:$hashedpassword'
 
