--- a/grafana/provisioning/alerting/alerts.yaml
+++ b/grafana/provisioning/alerting/alerts.yaml
@@ -1,7 +1,7 @@
 apiVersion: 1
 groups:
   - orgId: 1
-    name: Highest importance
+    name: Services health
     folder: healthchecks
     interval: 10s
     rules:
@@ -60,14 +60,14 @@ groups:
         execErrState: Error
         for: 1m
         annotations:
-          summary: sevice is down
+          summary: service is down
         labels:
           severity: high
         isPaused: false
         notification_settings:
           receiver: Telegram
   - orgId: 1
-    name: High importance
+    name: TLS certificates
     folder: healthchecks
     interval: 30m
     rules:
